# hello_cmake_qt6_android

./: CMakeLists.txt  README.md  build.sh  main.cpp
.github/workflows/: build.yml
